@@ -6,6 +6,13 @@ Post-v3.2.0
        from older version is supported but it may trigger more leader elections
        during the process, and error logs complaining unrecognized fields may
        be observed on old nodes.
+   - ovs-appctl:
+     * Output of 'dpctl/show' command no longer shows interface configuration
+       status, only values of the actual configuration options, a.k.a.
+       'requested' configuration.  The interface configuration status,
+       a.k.a. 'configured' values, can be found in the 'status' column of
+       the Interface table, i.e. with 'ovs-vsctl get interface <..> status'.
+       Reported names adjusted accordingly.
 
 
 v3.2.0 - 17 Aug 2023
